apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: apps
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
        app.kubernetes.io/name: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: advplyr/audiobookshelf:2.32.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
            - name: audiobooks
              mountPath: /audiobooks
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc
        - name: metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata-pvc
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks-pvc
