apps/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: apps
spec:
  selector:
    app: audiobookshelf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
